improved upon eslint to cover module handling
Signed-off-by: Tobias Winkler <info@tobiaswinkler.berlin>

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,8 +8,10 @@
         "plugin:react/recommended"
     ],
     "parserOptions": {
+        "sourceType": "module",
         "ecmaFeatures": {
-            "jsx": true
+            "jsx": true,
+            "modules": true
         }
     }
 }
