--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
     "react-dom": "^16.6.x",
     "react-native": "^0.61.4",
     "react-native-web": "^0.10.x",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.0",
-    "react-router-native": "^5.0.0"
+    "react-router-native": "^5.0.0",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
+    "@types/react": "^16.9.11",
+    "@types/react-redux": "^7.1.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
