--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "ios": "./node_modules/.bin/react-native run-ios",
     "web": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "lint": "npm run lint:js && npm run lint:css",
+    "lint:css": "stylelint src/**/*.js",
+    "lint:eslint": "eslint",
+    "lint:js": "npm run lint:eslint -- .",
+    "lint:staged": "lint-staged",
+    "pretest": "npm run test:clean && npm run lint",
+    "test:clean": "rimraf ./coverageNative && rimraf ./coverageWeb",
     "test": "npm run test:web && npm run test:native",
     "test:web-watch": "node scripts/test.js --watch --config \"./config/web.jest.config.js\"",
     "test:web": "node scripts/test.js --config \"./config/web.jest.config.js\"",
@@ -18,6 +25,7 @@
     "coverage:native": "node scripts/test.js --config \"./config/native.jest.config.js\" --coverage"
   },
   "dependencies": {
+    "@types/jest": "^24.0.23",
     "react": "^16.6.x",
     "react-app-polyfill": "^0.1.3",
     "react-art": "^16.6.x",
@@ -37,7 +45,7 @@
     "@types/react-redux": "^7.1.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
-    "babel-jest": "23.6.0",
+    "babel-jest": "^24.9.0",
     "babel-loader": "8.0.4",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-named-asset-import": "^0.2.3",
@@ -45,6 +53,7 @@
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
+    "cross-env": "^6.0.3",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
@@ -57,14 +66,16 @@
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-redux-saga": "^1.1.1",
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.0",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
-    "jest": "23.6.0",
-    "jest-pnp-resolver": "1.0.1",
-    "jest-resolve": "23.6.0",
+    "jest": "^24.9.0",
+    "jest-pnp-resolver": "^1.2.1",
+    "jest-resolve": "^24.9.0",
     "metro-react-native-babel-preset": "^0.51.0",
     "mini-css-extract-plugin": "0.4.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -73,14 +84,18 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
+    "pre-commit": "^1.2.2",
     "prettier": "^1.19.1",
     "prettier-eslint": "^9.0.0",
     "react-dev-utils": "^6.1.1",
     "react-hot-loader": "^4.6.3",
     "react-test-renderer": "^16.6.3",
     "resolve": "1.8.1",
+    "rimraf": "^3.0.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
+    "stylelint": "^11.1.1",
+    "stylelint-config-recommended": "^3.0.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
     "webpack": "4.19.1",
