--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-router-dom": "^5.0.0",
     "react-router-native": "^5.0.0",
     "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "7.1.0",
